examples/kubernetes/envoygw/gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: heimdall
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
  namespace: heimdall
#  annotations:
#    cert-manager.io/cluster-issuer: root-ca
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      hostname: echo-app.local
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: eg-tls
            kind: Secret
